--- a/backend/static/SignTest.html
+++ b/backend/static/SignTest.html
@@ -39,6 +39,7 @@
     <!-- 生成二维码区域 -->
     <div class="section">
         <h2>生成二维码</h2>
+        <input type = "number" id = "GenerateQRCodeID" placeholder="签到ID，不填默认最近设置的事件" value="">
         <button onclick="generateQRCode()">生成活动二维码</button>
         <div id="qrContainer"></div>
     </div>
@@ -48,8 +49,6 @@
         <h2>签到测试</h2>
         <div>
             <input type="text" id="tokenInput" placeholder="输入二维码token" style="width: 300px;">
-            <input type="number" id="latitude" step="0.000001" placeholder="纬度" value="31.2304">
-            <input type="number" id="longitude" step="0.000001" placeholder="经度" value="121.4737">
             <button onclick="performCheckIn()">执行签到</button>
         </div>
         <div id="checkinResult" style="margin-top: 10px;"></div>
@@ -59,11 +58,8 @@
         <h2>创建签到事件</h2>
         <div>
             <input type="text" id="eventName" placeholder="事件名称" style="width: 200px;">
-            <input type="number" id="eventLat" step="0.000001" placeholder="纬度" value="31.2304">
-            <input type="number" id="eventLng" step="0.000001" placeholder="经度" value="121.4737">
-            <input type="number" id="eventRadius" placeholder="有效半径（米）" min="1" value="100">
             <input type="datetime-local" id="eventTime">
-            <input type = "number" id = "duration"placeholder="持续时间(分钟)" value="10">
+            <input type = "number" id = "duration" placeholder="持续时间(分钟)" value="10">
             <button onclick="createSignEvent()">创建事件</button>
         </div>
         <div id="eventResult" style="margin-top: 10px; color: green;"></div>
@@ -110,7 +106,7 @@
         const csrftoken = getCookie('csrftoken');
         // WebSocket连接管理
         let socket = null;
-        const eventId = 1; // 测试用活动ID
+        let eventId = 1; // 测试用活动ID
 
         // 初始化WebSocket连接
         function connectWebSocket() {
@@ -144,9 +140,6 @@
         async function createSignEvent() {
         const eventData = {
             name: document.getElementById('eventName').value,
-            gps_lat: parseFloat(document.getElementById('eventLat').value),
-            gps_lng: parseFloat(document.getElementById('eventLng').value),
-            valid_radius: parseInt(document.getElementById('eventRadius').value),
             start_time: document.getElementById('eventTime').value,
             duration_minutes: parseInt(document.getElementById('duration').value)
         };
@@ -163,8 +156,9 @@
             });
 
             const result = await response.json();
+            eventId = result.id;
             document.getElementById('eventResult').innerHTML =
-                `✅ 事件创建成功 (ID: ${result.id})`;
+                `✅ 签到事件创建成功 (ID: ${result.id})`;
 
             // 清空表单
             document.getElementById('eventName').value = '';
@@ -181,6 +175,9 @@
         // 生成二维码
         async function generateQRCode() {
             try {
+                if (document.getElementById("GenerateQRCodeID") != null)
+                    eventId = document.getElementById("GenerateQRCodeID").value;
+
                 const response = await fetch(`/SigninManager/${eventId}/generate-qr/`, {
                     method: 'POST',
                     headers: {
